--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=8080
+spring.application.name=servicio-inventario
 
+spring.datasource.url=jdbc:mysql://localhost:3306/tienda_electronica
+spring.datasource.username=admin
+spring.datasource.password=root
